Fix alignment

--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ html {
 	color: white;
 	font-size: 16px;
 	position: absolute;
+	margin: 0 auto;
 }
 
 footer {
